--- a/static/login.css
+++ b/static/login.css
@@ -82,7 +82,8 @@ body {
     display: block;
     border: 3px solid #7a7aa7;
     border-radius: 5px;
-    margin-left: 800px;
+    width: 400px;
+    margin-left: 660px;
     margin-right: 800px;
     margin-top: 125px;
     text-align: center;
