--- a/static/about.css
+++ b/static/about.css
@@ -13,6 +13,10 @@ body {
     border-radius: 15px;
     border: .5px solid #7a7aa7;
 }
+p, h1 {
+    margin-left: 100px;
+    margin-right: 100px;
+}
 
 .navbar li {
     float: left;
@@ -71,96 +75,6 @@ body {
     color: white;
     text-align: center;
 }
-
-.leaderboard {
-    margin-left: 1450px;
-    margin-top: -800px;
-    animation: fade-in 3700ms 1000ms backwards;
-}
-
-.leaderboard, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-    border-color: #7a7aa7;
-    color: white;
-    text-align: center;
-}
-
-.nemtom {
-    padding: 200px;
-    animation: fade-in 900ms 700ms backwards;
-}
-
-.cards {
-    width: 570px;
-    margin-left: 1125px;
-    margin-top: -645px;
-    animation: fade-in 900ms 700ms backwards;
-
-}
-
-.nemtom p {
-    font-size: 47px;
-    margin-top: -278px;
-    margin-left: -15px;
-    margin-right: 1000px;
-}
-
-.loginbutton {
-    padding: 23px 20px;
-    width: 140px;
-    font-size: 15px;
-    background-color: #7a7aa7;
-    border: none;
-    border-radius: 5px;
-    border: 1px solid white;
-    margin-left: -12px;
-    margin-top: 200px;
-    color: white;
-}
-
-.secure {
-    width: 100px;
-    margin-left: 100px;
-    margin-top: 150px;
-}
-
-.money {
-    width: 150px;
-    margin-left: 70px;
-    margin-top: 150px;
-}
-
-.fair {
-    width: 150px;
-    margin-left: 70px;
-    margin-top: 150px;
-}
-
-.text {
-    margin-left: 235px;
-    font-size: 20px;
-    margin-top: -155px;
-    text-justify: auto;
-    margin-right: 700px;
-}
-
-.text2 {
-    margin-left: 240px;
-    font-size: 20px;
-    margin-top: -155px;
-    text-justify: auto;
-    margin-right: 700px;
-}
-
-.text3 {
-    margin-left: 240px;
-    font-size: 20px;
-    margin-top: -190px;
-    text-justify: auto;
-    margin-right: 700px;
-}
-
 
 /* animation class and keyframes */
 .overflow-hidden {
