--- a/static/gamesstyle.css
+++ b/static/gamesstyle.css
@@ -1,3 +1,10 @@
+:root {
+    --primary:  #7a7aa7; /*#555555;*/
+    --primary-variant: #4f4d68; /*#3e3d3d;*/
+    --on-background: #7a7aa7; /*#555555;*/
+    --on-primary: white;
+}
+
 body {
     background-color: #4f4d68;
     font-family: 'DM Mono';
@@ -9,7 +16,7 @@ body {
     bottom: 0;
     width: 100%;
     background-color: #7a7aa7;
-    color: white;
+    color: var(--on-primary);
     text-align: center;
 }
 
@@ -40,7 +47,7 @@ body {
 
 .navbar li a {
     display: block;
-    color: white;
+    color: var(--on-primary);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -81,7 +88,7 @@ body {
 #container p {
     position: fixed;
     text-align: center;
-    color: white;
+    color: var(--on-primary);
     margin-left: 440px;
     opacity: 0;
     transition: .3s;
@@ -117,7 +124,7 @@ body {
 #container2 p {
     position: fixed;
     text-align: center;
-    color: white;
+    color: var(--on-primary);
     margin-left: 160px;
     margin-top: -100px;
     opacity: 0;
