--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,61 @@
-body {
-    background-color: #4f4d68;
-    font-family: 'DM Mono';
-    color: white;
+:root {
+    --primary:  #7a7aa7; /*#555555;*/
+    --primary-variant: #4f4d68; /*#3e3d3d;*/
+    --on-background: #7a7aa7; /*#555555;*/
+    --on-primary: white;
 }
+
+body {
+    background-color: var(--primary-variant);
+    font-family: 'DM Mono';
+    color: var(--on-primary);
+}
+
+ .dropbtn {
+    background-color: var(--on-background);
+    color: var(--on-primary);
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    position: fixed;
+    margin-top: 700px;
+    border: 1px solid white;
+    border-radius: 5px;
+  }
+  
+
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: var(--on-background);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    margin-top: 610px;
+  }
+  
+
+  .dropdown-content a {
+    color: var(--on-primary);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+
+  .dropdown-content a:hover {background-color:  var(--primary-variant);}
+  
+
+  .dropdown:hover .dropdown-content {display: block; position: fixed;}
+  
+
+  .dropdown:hover .dropbtn {background-color: var(--on-background);} 
+
 
 .navbar ul {
     list-style-type: none;
@@ -11,7 +64,7 @@ body {
     overflow: hidden;
     background: none;
     border-radius: 15px;
-    border: .5px solid #7a7aa7;
+    border: .5px solid var(--on-background);
 }
 
 .navbar li {
@@ -26,12 +79,12 @@ body {
 
 .navbar li:nth-last-child(n + 2) {
     float: left;
-    border-right: .5px solid #7a7aa7;
+    border-right: .5px solid var(--on-background);
 }
 
 .navbar li a {
     display: block;
-    color: white;
+    color: var(--on-primary);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -48,7 +101,7 @@ body {
 
 .label {
     display: block;
-    color: white;
+    color: var(--on-primary);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -67,8 +120,8 @@ body {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: #7a7aa7;
-    color: white;
+    background-color: var(--on-background);
+    color: var(--on-primary);
     text-align: center;
 }
 
@@ -81,8 +134,8 @@ body {
 .leaderboard, th, td {
     border: 1px solid black;
     border-collapse: collapse;
-    border-color: #7a7aa7;
-    color: white;
+    border-color: var(--on-background);
+    color: var(--on-primary);
     text-align: center;
 }
 
@@ -110,13 +163,13 @@ body {
     padding: 23px 20px;
     width: 140px;
     font-size: 15px;
-    background-color: #7a7aa7;
+    background-color: var(--on-background);
     border: none;
     border-radius: 5px;
-    border: 1px solid white;
+    border: 1px solid var(--on-primary);
     margin-left: -12px;
     margin-top: 200px;
-    color: white;
+    color: var(--on-primary);
 }
 
 .secure {
